Adjusted hero video width height to ensure no layout shift on load on desktop second try

--- a/style.css
+++ b/style.css
@@ -223,8 +223,8 @@ video:-ms-controls-panel {
 
 .hero-video {
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    /* height: 100vh;
+    width: 100vw; */
 
     overflow: hidden;
 
@@ -237,6 +237,10 @@ video:-ms-controls-panel {
     font-style: normal;
 
     color: white;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     aspect-ratio: 16 / 9;
 
 }
